# goit-pythonweb-hw-08

./: README.md  pyproject.toml
src/schemas/: contacts.py
